# NetMedEx

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  analyze_cns_results.py  benchmark_llm_comparison.py  dash_deps.json  docker-compose.yml  entrypoint.sh  index.html  package-lock.json  package.json  pubtator_to_shap_pipeline.py  pyproject.toml  pyrightconfig.json  start_pediatric.sh  start_webapp.sh  test_callbacks.py  test_chat_language.py  test_dash_js.py  test_llm_client.py
.github/workflows/: docker-publish.yml
cli_guides/: index.html
docs/: DASH_COMPATIBILITY.md  DOCKERHUB_OVERVIEW.md  ENDNOTE_citations.ris  NetMedEx_vs_MRTKG_comparison.md  cli_guides.md  demo.xgmml  demo_chat_history.html  demo_html.html  demo_pubtator.biocjson  installation.md  token_cost.md  v1.2.7_issue_tracking.md  web_app_guides.md
examples/: gradio_chat_ui.py  minimal_chat_ui.html  netmedex_chat_bridge.py  netmedex_fastapi_client.py  netmedex_fastapi_server.py
installation/: index.html
manuscript/: NetMedEx_Manuscript_v1.0_NatureMethods.md  NetMedEx_Manuscript_v1.2.0_2026-04-25.docx  NetMedEx_Manuscript_v1.2.0_2026-04-25.md
netmedex/: biocjson_parser.py  chat.py  chat_bridge.py  citation_fetcher.py  cli.py  cytoscape_html_template.py  cytoscape_js.py  cytoscape_xgmml.py  fastapi_bridge.py  graph.py  graph_data.py  graph_rag.py  initialize_expert_session.py  node_rag.py  normalization.py  npmi.py  pubtator.py  pubtator_data.py  pubtator_graph_data.py  pubtator_parser.py  rag.py  ris_exporter.py  semantic_re.py  subtype_service.py  utils.py
notebooks/: advanced_usage.ipynb
reference/: index.html
scripts/: switch_provider.sh
tests/: test_citation_fetcher.py  test_cli.py  test_model_selection.py  test_rag_chat.py  test_semantic_prompt.py
use_cases/: index.html
use_cases/text_query/: index.html
web_app_guides/: index.html
webapp/: add_groq_models.py  add_groq_refresh.py  app.py  app_pediatric.py  llm.py  upload_limits.py  utils.py  wsgi.py
webapp/assets/: clientside_scripts_v8.js  index.css  mermaid_renderer.js  pediatric_bridge_receiver.js
webapp/assets_pediatric/: biodashboard.html  clientside_scripts_v8.js  index.css  pediatric_override.css
webapp/callbacks/: advanced_settings.py  chat_callbacks.py  control_buttons.py  export.py  graph_settings.py  graph_update.py  graph_utils.py  input_type_update.py  llm_callbacks.py  pipeline.py  search_history.py  sidebar_toggle.py  upload.py
webapp/components/: advanced_settings.py  chat.py  graph.py  graph_tools.py  sidebar.py  utils.py
