[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["netmedex*", "webapp*"]

[tool.setuptools.package-data]
netmedex = [
  "vendor/*.js",
]
webapp = [
  "assets/*.js",
  "assets/*.svg",
  "assets/*.css",
  "assets/*.ico",
  "assets/*.png",
]

[project]
name = "netmedex"
version = "1.3.4"
authors = [{ name = "Zheng-Xiang Ye", email = "r12b48005@ntu.edu.tw" }, { name = "Chung-Yen Lin", email = "cylin@iis.sinica.edu.tw" }, { name = "Shu-Hwa Chen", email = "sophia0715@tmu.edu.tw" }]
description = "A tool to extract BioConcept entities (e.g., genes, diseases, chemicals, and species) from Pubtator3 and generate a co-mention network for interactive use."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "aiohttp",
  "aiometer",
  "tenacity",
  "tqdm",
  "networkx[default]>=3.2,<5",
  "lxml",
  "python-dotenv",
  "openai>=1.0,<3.0",
  "anthropic>=0.50.0,<1.0",
  "dash[diskcache]>=2.17,<3.0",
  "dash-cytoscape~=1.0.2",
  "dash-bootstrap-components>=1.7.1,<2.0",
  "chromadb>=1.0",
  "tiktoken",
  "rispy>=0.10.0",
  "markdown>=3.4.4",
  "scikit-learn>=1.0,<1.4; python_version<'3.11'",
  "scikit-learn>=1.0; python_version>='3.11'",
  "numpy>=1.24",
  "plotly>=5.0",
  "diskcache>=5.6.3",
  "multiprocess>=0.70.19",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3.2",
  "pytest-xdist",
  "pytest-cov",
  "requests-mock",
  "pytest-mock",
  "ruff==0.8.0",
  "pre-commit",
  "mkdocs",
]
api = [
  "fastapi",
  "uvicorn",
]
ui = [
  "gradio",
]

[project.scripts]
netmedex = "netmedex.cli:main"

[tool.ruff]
line-length = 99
target-version = "py311"
# exclude = [""]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  # "ARG001", # unused arguments in functions
]
ignore = [
  "E402", # module level import not at top of file
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "W191", # indentation contains tabs
  "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["brain_network", "webapp-temp", ".venv", "venv", "build", "dist"]


[tool.pyright]
include = ["./netmedex"]
typeCheckingMode = "standard"
